--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html lang="ru">
 <title>Web Studio</title>
 <header>
-  <!--Шапка-->
+  <section>
+    <!--Верхняя линия-->
+    <p>WebStudio</p>
+    <nav>
+      <ul>
+        <li><a href="/* Активная ссылка */" target="_blank">Студия</a></li>
+        <li>Портфолио</li>
+        <li>Контакты</li>
+      </ul>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
+    </nav>
+  </section>
+
+  <section>
+    <!--Шапка-->
+  </section>
 </header>
 <main>
   <!--Основные разделы-->
-  <h1>Hello</h1>
 </main>
 <footer>
   <!--Подвал-->
