--- a/index.html
+++ b/index.html
@@ -16,13 +16,94 @@
       </address>
     </nav>
   </section>
-
   <section>
     <!--Шапка-->
+    <img src="./images/Bg.jpg" alt="серый фон" width="1600" height="600" />
+    <p>Эффективные решения для вашего бизнеса</p>
+    <button type="button">Заказать услугу</button>
   </section>
 </header>
 <main>
   <!--Основные разделы-->
+  <section>
+    <!--Особенности-->
+    <ul>
+      <li>
+        <p>Внимание к деталям</p>
+        Идейные соображения, а также начало повседневной работы по формированию позиции.
+      </li>
+      <li>
+        <p>Пунктуальность</p>
+        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+      </li>
+      <li>
+        <p>Планирование</p>
+        Равным образом консультация с широким активом в значительной степени обуславливает.
+      </li>
+      <li>
+        <p>Современные технологии</p>
+        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+      </li>
+    </ul>
+  </section>
+  <section>
+    <!--Чем мы занимаемся-->
+    <p>Чем мы занимаемся</p>
+    <ul>
+      <li>
+        <img
+          src="./images/img1.jpg"
+          alt="изображение палитры цветов на планшете в руках пользователя"
+        />
+      </li>
+      <li>
+        <img
+          src="./images/img2.jpg"
+          alt="изображение палитры цветов на планшете в руках пользователя"
+        />
+      </li>
+      <li>
+        <img
+          src="./images/img3.jpg"
+          alt="изображение палитры цветов на планшете в руках пользователя"
+        />
+      </li>
+    </ul>
+  </section>
+  <section>
+    <!--Наша команда-->
+    <p>Наша команда</p>
+    <section>
+      <ul>
+        <li>
+          <img src="./images/Igor 1.jpg" alt="фото Игоря Демьяненко" width="270" height="260">
+          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
+            <p>Игорь Демьяненко</p>
+            <p lang="en">Product Designer</p>
+          </img>
+        </li>
+        <li>
+          <img src="./images/Olga 2.jpg" alt="фото Ольги Репиной" width="270" height="260">
+          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
+            <p>Ольга Репина</p>
+            <p lang="en">Frontend Developer</p>
+          </img>
+        </li>
+        <li>
+          <img src="./images/Nikolay 3.jpg" alt="фото Николая Тарасова" width="270" height="260">
+          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
+            <p></p>
+            <p lang="en">Marketing</p>
+          </img>
+        </li>
+        <li>
+          <img src="./images/Max 4.jpg" alt="фото Михаила Ермакова" width="270" height="260">
+          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
+            <p>Михаил Ермаков</p>
+            <p lang="en">UI Designer</p>
+      </ul>
+    </section>
+  </section>
 </main>
 <footer>
   <!--Подвал-->
