корректировки к основной части

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <li>
           <img src="./images/Nikolay 3.jpg" alt="фото Николая Тарасова" width="270" height="260">
           <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
-            <p></p>
+            <p>Николай Тарасов</p>
             <p lang="en">Marketing</p>
           </img>
         </li>
