--- a/index.html
+++ b/index.html
@@ -107,4 +107,11 @@
 </main>
 <footer>
   <!--Подвал-->
+  <p>WebStudio</p>
+  <ul>
+    <li>г. Киев, пр-т Леси Украинки, 26</li>
+    <li>info@example.com</li>
+    <li>+380991111111</li>
+  </ul>
+  <img src="./images/Footer bg.jpg" alt="серый фон">
 </footer>
