--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </section>
   <section>
     <!--Шапка-->
-    <img src="./images/Bg.jpg" alt="серый фон" width="1600" height="600" />
-    <p>Эффективные решения для вашего бизнеса</p>
+    <img src="./images/Bg.jpg" alt="серый фон" width="1600" height="600"/>
+    <h1>Эффективные решения для вашего бизнеса</h1>
     <button type="button">Заказать услугу</button>
   </section>
 </header>
@@ -48,7 +48,7 @@
   </section>
   <section>
     <!--Чем мы занимаемся-->
-    <p>Чем мы занимаемся</p>
+    <h2>Чем мы занимаемся</h2>
     <ul>
       <li>
         <img
@@ -72,7 +72,7 @@
   </section>
   <section>
     <!--Наша команда-->
-    <p>Наша команда</p>
+    <h2>Наша команда</h2>
     <section>
       <ul>
         <li>
@@ -109,9 +109,11 @@
   <!--Подвал-->
   <p>WebStudio</p>
   <ul>
-    <li>г. Киев, пр-т Леси Украинки, 26</li>
+    <li>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+    </li>
     <li>info@example.com</li>
     <li>+38 099 111 11 11</li>
   </ul>
-  <img src="./images/Footer bg.jpg" alt="серый фон">
+  <img src="./images/Footer bg.jpg" alt="серый фон" width="231" height="21">
 </footer>
