исправление после 1 валидации

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html lang="ru">
-<title>Web Studio</title>
+<title lang="en">Web Studio</title>
 <header>
   <section>
     <!--Верхняя линия-->
@@ -72,42 +72,39 @@
   </section>
   <section>
     <!--Наша команда-->
-    <h2>Наша команда</h2>
+    <h3>Наша команда</h3>
     <section>
       <ul>
         <li>
-          <img src="./images/Igor 1.jpg" alt="фото Игоря Демьяненко" width="270" height="260">
-          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
+          <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260"></li><img src="" alt="">
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368"></li><img src="" alt="">
             <p>Игорь Демьяненко</p>
             <p lang="en">Product Designer</p>
-          </img>
         </li>
         <li>
-          <img src="./images/Olga 2.jpg" alt="фото Ольги Репиной" width="270" height="260">
-          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
+          <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260"></li><img src="" alt="">
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368"></li><img src="" alt="">
             <p>Ольга Репина</p>
             <p lang="en">Frontend Developer</p>
-          </img>
         </li>
         <li>
-          <img src="./images/Nikolay 3.jpg" alt="фото Николая Тарасова" width="270" height="260">
-          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
+          <img src="./images/Nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260"></li>
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368"></li>
             <p>Николай Тарасов</p>
             <p lang="en">Marketing</p>
-          </img>
         </li>
         <li>
-          <img src="./images/Max 4.jpg" alt="фото Михаила Ермакова" width="270" height="260">
-          <img src="./images/card bg.jpg" alt="изображение карточки" width="270" height="368">
-            <p>Михаил Ермаков</p>
+          <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260">
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368">
             <p lang="en">UI Designer</p>
+        </li>
       </ul>
     </section>
   </section>
 </main>
 <footer>
   <!--Подвал-->
-  <p>WebStudio</p>
+  <p lang="en">WebStudio</p>
   <ul>
     <li>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
@@ -115,5 +112,5 @@
     <li>info@example.com</li>
     <li>+38 099 111 11 11</li>
   </ul>
-  <img src="./images/Footer bg.jpg" alt="серый фон" width="231" height="21">
+  <img src="./images/Footerbg.jpg" alt="серый фон" width="231" height="21">
 </footer>
