исправление после 1 валидации 2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </section>
   <section>
     <!--Шапка-->
-    <img src="./images/Bg.jpg" alt="серый фон" width="1600" height="600"/>
+    <img src="./images/Bg.jpg" alt="серый фон" width="1600" height="600" />
     <h1>Эффективные решения для вашего бизнеса</h1>
     <button type="button">Заказать услугу</button>
   </section>
@@ -76,27 +76,28 @@
     <section>
       <ul>
         <li>
-          <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260"></li><img src="" alt="">
-          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368"></li><img src="" alt="">
-            <p>Игорь Демьяненко</p>
-            <p lang="en">Product Designer</p>
+          <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+          <p>Игорь Демьяненко</p>
+          <p lang="en">Product Designer</p>
         </li>
         <li>
-          <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260"></li><img src="" alt="">
-          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368"></li><img src="" alt="">
-            <p>Ольга Репина</p>
-            <p lang="en">Frontend Developer</p>
+          <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+          <p>Ольга Репина</p>
+          <p lang="en">Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/Nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260"></li>
-          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368"></li>
-            <p>Николай Тарасов</p>
-            <p lang="en">Marketing</p>
+          <img src="./images/Nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+          <p>Николай Тарасов</p>
+          <p lang="en">Marketing</p>
         </li>
         <li>
-          <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260">
-          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368">
-            <p lang="en">UI Designer</p>
+          <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
+          <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+          <p>Михаил Ермаков</p>
+          <p lang="en">UI Designer</p>
         </li>
       </ul>
     </section>
@@ -112,5 +113,5 @@
     <li>info@example.com</li>
     <li>+38 099 111 11 11</li>
   </ul>
-  <img src="./images/Footerbg.jpg" alt="серый фон" width="231" height="21">
+  <img src="./images/Footerbg.jpg" alt="серый фон" width="231" height="21" />
 </footer>
