исправления после 4 валидации

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru"></html>
-<title lang="en">Web Studio</title>
+<title>Web Studio</title>
 <header>
   <section>
     <!--Верхняя линия-->
