--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h4>WebStudio</h4>
       <nav>
         <ul>
-          <li><a href="/*Активная ссылка*/" target="_blank">Студия</a></li>
+          <li><a href="/*Активная_ссылка*/" target="_blank">Студия</a></li>
           <li>Портфолио</li>
           <li>Контакты</li>
         </ul>
@@ -24,103 +24,96 @@
       <button type="button">Заказать услугу</button>
     </section>
   </header>
-  <body>
-    <main>
-      <!--Основные разделы-->
-      <section>
-        <!--Особенности-->
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            Идейные соображения, а также начало повседневной работы по формированию позиции.
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            Равным образом консультация с широким активом в значительной степени обуславливает.
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-          </li>
-        </ul>
-      </section>
-      <section>
-        <!--Чем мы занимаемся-->
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="изображение палитры цветов на планшете в руках пользователя"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="изображение палитры цветов на планшете в руках пользователя"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="изображение палитры цветов на планшете в руках пользователя"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <!--Наша команда-->
-        <h2>Наша команда</h2>
-        <section>
-          <ul>
-            <li>
-              <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
-              <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-              <p>Игорь Демьяненко</p>
-              <p lang="en">Product Designer</p>
-            </li>
-            <li>
-              <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
-              <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-              <p>Ольга Репина</p>
-              <p lang="en">Frontend Developer</p>
-            </li>
-            <li>
-              <img
-                src="./images/Nikolay3.jpg"
-                alt="фото Николая Тарасова"
-                width="270"
-                height="260"
-              />
-              <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-              <p>Николай Тарасов</p>
-              <p lang="en">Marketing</p>
-            </li>
-            <li>
-              <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
-              <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-              <p>Михаил Ермаков</p>
-              <p lang="en">UI Designer</p>
-            </li>
-          </ul>
-        </section>
-      </section>
-    </main>
-    <footer>
-      <!--Подвал-->
-      <p lang="en">WebStudio</p>
+  <main>
+    <!--Основные разделы-->
+    <section>
+      <!--Особенности-->
       <ul>
         <li>
-          <address>г. Киев, пр-т Леси Украинки, 26</address>
+          <h3>Внимание к деталям</h3>
+          Идейные соображения, а также начало повседневной работы по формированию позиции.
         </li>
-        <li>info@example.com</li>
-        <li>+38 099 111 11 11</li>
+        <li>
+          <h3>Пунктуальность</h3>
+          Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          Равным образом консультация с широким активом в значительной степени обуславливает.
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+        </li>
       </ul>
-      <img src="./images/Footerbg.jpg" alt="серый фон" width="1600" height="252" />
-    </footer>
-  </body>
+    </section>
+    <section>
+      <!--Чем мы занимаемся-->
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/img1.jpg"
+            alt="изображение палитры цветов на планшете в руках пользователя"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/img2.jpg"
+            alt="изображение палитры цветов на планшете в руках пользователя"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/img3.jpg"
+            alt="изображение палитры цветов на планшете в руках пользователя"
+          />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <!--Наша команда-->
+      <h2>Наша команда</h2>
+      <section>
+        <ul>
+          <li>
+            <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
+            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+            <p>Игорь Демьяненко</p>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
+            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+            <p>Ольга Репина</p>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/Nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
+            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+            <p>Николай Тарасов</p>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
+            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
+            <p>Михаил Ермаков</p>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </section>
+  </main>
+  <footer>
+    <!--Подвал-->
+    <p lang="en">WebStudio</p>
+    <ul>
+      <li>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+      </li>
+      <li>info@example.com</li>
+      <li>+38 099 111 11 11</li>
+    </ul>
+    <img src="./images/Footerbg.jpg" alt="серый фон" width="1600" height="252" />
+  </footer>
 </html>
