--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <title>Web Studio</title>
-  <header>
-    <section>
-      <!--Верхняя линия-->
-      <h4>WebStudio</h4>
-      <nav>
-        <ul>
-          <li><a href="/*Активная_ссылка*/" target="_blank">Студия</a></li>
-          <li>Портфолио</li>
-          <li>Контакты</li>
-        </ul>
-        <address>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
-      </nav>
-    </section>
-    <section>
-      <!--Шапка-->
-      <img src="./images/Bg.jpg" alt="серый фон" width="1600" height="600" />
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
-    </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web WebStudio</title>
+    <h4><a href="/*Активная_ссылка*/" target="_blank">WebStudio</a></h4>
+    <nav>
+      <ul>
+        <li><a href="/*Активная_ссылка*/" target="_blank">Студия</a></li>
+        <li><a href="/*Активная_ссылка*/" target="_blank">Портфолио</a></li>
+        <li><a href="/*Активная_ссылка*/" target="_blank">Контакты</a></li>
+      </ul>
+      <ul>
+        <li>info@devstudio.com</li>
+        <li>+38 096 111 11 11</li>
+      </ul>
+    </nav>
+  </head>
+</html>
   </header>
   <main>
     <!--Основные разделы-->
+    <section>
+      <!--Шапка-->
+      <h1>Эффективные решения для вашего бизнеса</h1>
+      <button type="button">Заказать услугу</button>
+    </section>
     <section>
       <!--Особенности-->
       <ul>
         <li>
           <h3>Внимание к деталям</h3>
-          Идейные соображения, а также начало повседневной работы по формированию позиции.
+          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li>
           <h3>Пунктуальность</h3>
-          Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой</p>
         </li>
         <li>
           <h3>Планирование</h3>
-          Равным образом консультация с широким активом в значительной степени обуславливает.
+          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li>
           <h3>Современные технологии</h3>
-          Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
       </ul>
     </section>
@@ -54,19 +55,22 @@
         <li>
           <img
             src="./images/img1.jpg"
-            alt="изображение палитры цветов на планшете в руках пользователя"
+            alt="изображение палитры цветов на планшете в руках пользователя" 
+            width="370" height="294"
           />
         </li>
         <li>
           <img
             src="./images/img2.jpg"
             alt="изображение палитры цветов на планшете в руках пользователя"
+            width="370" height="294"
           />
         </li>
         <li>
           <img
             src="./images/img3.jpg"
             alt="изображение палитры цветов на планшете в руках пользователя"
+            width="370" height="294"
           />
         </li>
       </ul>
@@ -74,46 +78,37 @@
     <section>
       <!--Наша команда-->
       <h2>Наша команда</h2>
-      <section>
-        <ul>
+      <ul>
           <li>
-            <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
-            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-            <p>Игорь Демьяненко</p>
+            <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260"/>
+            <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
-            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-            <p>Ольга Репина</p>
+            <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260"/>
+            <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
-            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-            <p>Николай Тарасов</p>
+            <img src="./images/Nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260"/>
+            <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
-            <img src="./images/card_bg.jpg" alt="изображение карточки" width="270" height="368" />
-            <p>Михаил Ермаков</p>
+            <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260"/>
+            <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
-      </section>
     </section>
   </main>
   <footer>
     <!--Подвал-->
-    <p lang="en">WebStudio</p>
+    <h4><a href="/*Активная_ссылка*/" target="_blank">WebStudio</a></h4>
+    <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
-      <li>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-      </li>
-      <li>info@example.com</li>
-      <li>+38 099 111 11 11</li>
+      <li><a href="mailto:infi@example.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
-    <img src="./images/Footerbg.jpg" alt="серый фон" width="1600" height="252" />
   </footer>
 </html>
