редактирование после второй проверки и валидации

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web WebStudio</title>
-    <h4><a href="/*Активная_ссылка*/" target="_blank">WebStudio</a></h4>
+  </head>
+  <header>
+    <a href="/*Активная_ссылка*/" target="_blank">WebStudio</a>
     <nav>
       <ul>
         <li><a href="/*Активная_ссылка*/" target="_blank">Студия</a></li>
         <li><a href="/*Активная_ссылка*/" target="_blank">Портфолио</a></li>
         <li><a href="/*Активная_ссылка*/" target="_blank">Контакты</a></li>
       </ul>
-      <ul>
-        <li>info@devstudio.com</li>
-        <li>+38 096 111 11 11</li>
-      </ul>
     </nav>
-  </head>
-</html>
+    <ul>
+      <li><a href="mailto:infi@example.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    </ul>
   </header>
   <main>
     <!--Основные разделы-->
@@ -55,22 +55,25 @@
         <li>
           <img
             src="./images/img1.jpg"
-            alt="изображение палитры цветов на планшете в руках пользователя" 
-            width="370" height="294"
+            alt="изображение палитры цветов на планшете в руках пользователя"
+            width="370"
+            height="294"
           />
         </li>
         <li>
           <img
             src="./images/img2.jpg"
             alt="изображение палитры цветов на планшете в руках пользователя"
-            width="370" height="294"
+            width="370"
+            height="294"
           />
         </li>
         <li>
           <img
             src="./images/img3.jpg"
             alt="изображение палитры цветов на планшете в руках пользователя"
-            width="370" height="294"
+            width="370"
+            height="294"
           />
         </li>
       </ul>
@@ -79,36 +82,38 @@
       <!--Наша команда-->
       <h2>Наша команда</h2>
       <ul>
-          <li>
-            <img src="./images/Igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260"/>
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/Olga2.jpg" alt="фото Ольги Репиной" width="270" height="260"/>
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/Nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260"/>
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/Mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260"/>
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <li>
+          <img src="./images/igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
+          <h3>Игорь Демьяненко</h3>
+          <p lang="en">Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/olga2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
+          <h3>Ольга Репина</h3>
+          <p lang="en">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
+          <h3>Николай Тарасов</h3>
+          <p lang="en">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
+          <h3>Михаил Ермаков</h3>
+          <p lang="en">UI Designer</p>
+        </li>
+      </ul>
     </section>
   </main>
   <footer>
     <!--Подвал-->
-    <h4><a href="/*Активная_ссылка*/" target="_blank">WebStudio</a></h4>
-    <address>г. Киев, пр-т Леси Украинки, 26</address>
-    <ul>
-      <li><a href="mailto:infi@example.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-    </ul>
+    <a href="/*Активная_ссылка*/" target="_blank">WebStudio</a>
+    <address>
+      г. Киев, пр-т Леси Украинки, 26
+      <ul>
+        <li><a href="mailto:infi@example.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+    </address>
   </footer>
 </html>
