--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="./images/igor1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
+          <img src="./images/1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
           <h3>Игорь Демьяненко</h3>
           <p lang="en">Product Designer</p>
         </li>
         <li>
-          <img src="./images/olga2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
+          <img src="./images/2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
           <h3>Ольга Репина</h3>
           <p lang="en">Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/nikolay3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
+          <img src="./images/3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
           <h3>Николай Тарасов</h3>
           <p lang="en">Marketing</p>
         </li>
         <li>
-          <img src="./images/mich4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
+          <img src="./images/4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
           <h3>Михаил Ермаков</h3>
           <p lang="en">UI Designer</p>
         </li>
